--- a/WebContent/v1-update.html
+++ b/WebContent/v1-update.html
@@ -14,7 +14,9 @@
 	<div id="pizza_nome" >
 	   <form name="fpizza_nome"> 
 			Pizza:
-			<Input id="PI_NOME" name="PI_NOME" type="text " size="20" value= "Entre o nome da pizza" onFocus="limpa(PI_NOME)"/>
+<!-- 			<Input id="PI_NOME" name="PI_NOME" type="text " size="20" value= "Entre o nome da pizza" onFocus="limpa(PI_NOME)"/> -->
+<!-- 				<Input id="PI_NOME" name="PI_NOME" type="text " size="20" value= "Entre o nome da pizza"  onkeypress="limpa(PI_NOME)"/> -->
+				<input type="text" id="PI_NOME" onkeydown="if (event.keyCode == 13) document.getElementById('botaoMutante').click()" size="20" value= "Entre o nome da pizza"  onkeypress="limpa(PI_NOME)"/>
 			<br /> 
 		</form>
 	</div>
@@ -33,12 +35,13 @@
 	</div>
 	<br />
 	<br />
-	<div id="botaoContinua" class="botaoContinua">
-		<button type="button" onclick="pegaDados()">Continua</button>
+	
+	<div id="botaoMutanteDiv" class="botaoMutante">
+		<input type="button" id="botaoMutante"  value = "willNeverSeeMe" onclick="filler()"></input>
+		
+		
 	</div>
-	<div id="botaoGrava" class="botaoGrava">
-		<button type="button" onclick="gravaDados()">Grava</button>
-	</div>
+	
 	<br/> <br/>
 	<hr />
 	<div id="fromServer">Status da gravacao</div>
