--- a/WebContent/v1-cadastro.html
+++ b/WebContent/v1-cadastro.html
@@ -5,7 +5,7 @@
 <title>Pizza - v1-cadastro</title>
 <script type="application/javascript">
   var http_request = null;
-  var url = "http://localhost:7001/com.ff.pizza/api/v1/crud/cadastro";
+  var url = "http://192.168.1.10:7001/com.ff.pizza/api/v1/crud/cadastro";
   var returnString = "";
   var buf = "";
  
