changes in readme

--- a/WebContent/readme.html
+++ b/WebContent/readme.html
@@ -14,7 +14,7 @@
 <h1>Read Me</h1>
 
 
-<p>	Please got to <a href="http://github.com/ff-nope/pizzaria"> http://github.com/ff-nope/pizzaria  </a> for source code. </p>
+<p>	Please go to <a href="http://github.com/ff-nope/pizzaria"> http://github.com/ff-nope/pizzaria  </a> for source code. </p>
 <p>Below is the list of available REST services <br />
 	
 </p>
